# eliott-evolution

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTEXT.md
include/evolution/: App.hpp  Simulation.hpp
include/evolution/Components/: Motion.hpp  NeuralNetWork.hpp  Tags.hpp  Transform.hpp  Vision.hpp  Vitals.hpp
include/evolution/Species/: Species.hpp  SpeciesSerializer.hpp
include/evolution/Systems/: MovementSystem.hpp  NeuralSystem.hpp  SimulationSystem.hpp  TagsSystems.hpp  VisionSystem.hpp
species/: kobolt.json
src/: App.cpp  Simulation.cpp  main.cpp
